# tanks-game

./: .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  changelog.txt  main.cpp  tanks-game.sln  tanks.ini
Dependencies/_misc/posix/: usleep-posix.h
Dependencies/_misc/win32/: usleep-windows.h
Dependencies/enkiTS/: TaskScheduler.cpp
Dependencies/freeglut/lib/: freeglut.lib
docs/: list-of-hazards.md  list-of-levels.md
tanks-game/: abstractrenderableobject.h  background-rect.cpp  background-rect.h  backgroundrect.cpp  backgroundrect.h  banana-power.cpp  banana-power.h  bananabulletpower.cpp  bananabulletpower.h  bananapower.cpp  bananapower.h  bananatankpower.cpp  bananatankpower.h  barrier-power.cpp  barrier-power.h  barrierpower.cpp  barrierpower.h  basic-ini-parser.cpp  basic-ini-parser.h  big-fun-level.cpp  big-named-power.cpp  big-named-power.h  bigfunlevel.cpp  bigfunlevel.h  bignamedbulletpower.cpp  bignamedbulletpower.h  bignamedpower.cpp  bignamedpower.h  bignamedtankpower.cpp  bignamedtankpower.h  blast-power.cpp  blast-power.h  blastbulletpower.cpp  blastbulletpower.h  blastpower.cpp  blastpower.h  blasttankpower.cpp  blasttankpower.h  bounce-power.cpp  bounce-power.h  (+564 more)
tanks-game/_source/: aaa_first.cpp  aaa_first.h  background-rect.cpp  background-rect.h  basic-ini-parser.cpp  basic-ini-parser.h  bullet-manager.cpp  bullet-manager.h  bullet-power.h  bullet.cpp  bullet.h  cannon-point.h  circle-hazard.cpp  circle-hazard.h  circle.h  collision-handler.cpp  collision-handler.h  color-cache.cpp  color-cache.h  color-mixer.cpp  color-mixer.h  color-value-holder.cpp  color-value-holder.h  constants.cpp  constants.h  custom-level-interpreter.cpp  custom-level-interpreter.h  custom-power-interpreter.cpp  custom-power-interpreter.h  developer-manager.cpp  developer-manager.h  diagnostics.cpp  diagnostics.h  drawable-thing.h  end-game-handler.cpp  end-game-handler.h  frame-time-graph.cpp  frame-time-graph.h  game-main-loop.cpp  game-main-loop.h  (+76 more)
tanks-game/_source/graphics/: index-buffer.cpp  index-buffer.h  null-rendering-context.h  opengl-index-buffer.cpp  opengl-index-buffer.h  opengl-rendering-context.cpp  opengl-rendering-context.h  opengl-shader.cpp  opengl-shader.h  opengl-vertex-array-object.cpp  opengl-vertex-array-object.h  opengl-vertex-array.cpp  opengl-vertex-array.h  opengl-vertex-buffer.cpp  opengl-vertex-buffer.h  rendering-context.h  shader.cpp  shader.h  software-rendering-context.h  vertex-array-object.cpp  vertex-array-object.h  vertex-array.cpp  vertex-array.h  vertex-buffer-layout.h  vertex-buffer.cpp  vertex-buffer.h
tanks-game/_source/hazards/: circular-lava-hazard.cpp  circular-lava-hazard.h  circular-lightning-hazard.cpp  circular-lightning-hazard.h  circular-no-bullet-zone-hazard.cpp  circular-no-bullet-zone-hazard.h  cloud-hazard.cpp  cloud-hazard.h  dev-wall-hazard.cpp  dev-wall-hazard.h  ginormous-turret-hazard.cpp  ginormous-turret-hazard.h  gravity-well-hazard.cpp  gravity-well-hazard.h  horizontal-lightning-hazard.cpp  horizontal-lightning-hazard.h  mother-turret-hazard.cpp  mother-turret-hazard.h  patrolling-turret-hazard.cpp  patrolling-turret-hazard.h  rectangular-lava-hazard.cpp  rectangular-lava-hazard.h  rectangular-lightning-hazard.cpp  rectangular-lightning-hazard.h  rectangular-no-bullet-zone-hazard.cpp  rectangular-no-bullet-zone-hazard.h  reflecktor-hazard.cpp  reflecktor-hazard.h  spiral-lava-hazard.cpp  spiral-lava-hazard.h  stationary-turret-hazard.cpp  stationary-turret-hazard.h  targeting-turret-hazard.cpp  targeting-turret-hazard.h  vertical-lightning-hazard.cpp  vertical-lightning-hazard.h
tanks-game/_source/imgui/: imgui_internal.h
tanks-game/_source/level-effects/: dev-symmetric-tanks-level-effect.cpp  dev-symmetric-tanks-level-effect.h  dev-tiny-tanks-level-effect.cpp  dev-tiny-tanks-level-effect.h  ice-level-effect.cpp  ice-level-effect.h  magnetism-level-effect.cpp  (+9 more)
tanks-game/docs/: custom-levels.md  custom-powers.md  ini-configuration.md  list-of-hazards.md  list-of-level-effects.md  list-of-levels.md  list-of-powers.md
tanks-game/graphics/: opengl-vertex-array.h
tanks-game/hazards/: circular-lava-hazard.cpp  circular-lava-hazard.h  circular-lightning-hazard.cpp  circular-lightning-hazard.h  circular-no-bullet-zone-hazard.cpp  circular-no-bullet-zone-hazard.h  dev-wall-hazard.h  ginormous-turret-hazard.cpp  ginormous-turret-hazard.h  horizontal-lightning-hazard.cpp  patrolling-turret-hazard.cpp  rectangular-no-bullet-zone-hazard.cpp  stationary-turret-hazard.cpp  stationary-turret-hazard.h  vertical-lightning-hazard.cpp  vertical-lightning-hazard.h
tanks-game/level-effects/: dev-symmetric-tanks-level-effect.cpp  dev-symmetric-tanks-level-effect.h  ice-level-effect.cpp  invisible-walls-level-effect.cpp  invisible-walls-level-effect.h  minefield-level-effect.cpp  wind-level-effect.h
tanks-game/levels/: big-fun-level.cpp  big-fun-level.h  concealed-powerups-level.cpp  concealed-powerups-level.h  corridor-level.h  dangerous-center-level.cpp  dev-no-walls-level-1.h  developer-level-1.cpp  empty-level.cpp  few-obstacles-level.cpp  hiding-places-level.cpp  hiding-places-level.h  lone-turret-level.cpp  lone-turret-level.h  many-hazards-level.h  tight-patrolling-corridor-level.cpp  timed-reward-level.cpp  tricky-maneuvering-level.cpp  tricky-maneuvering-level.h  unnamed-level-2.cpp  winning-path-level.cpp
tanks-game/mods/: ignore.txt  order.txt
tanks-game/powers/: banana-power.h  big-named-power.h  blast-power.cpp  blast-power.h  bounce-power.cpp  bounce-power.h  dev-backwards-movement-power.h  dev-color-changing-power.cpp  dev-long-invincible-named-power.cpp  dev-long-invincible-named-power.h  dev-other-stuff-is-poison-power.h  fire-named-power.h  grenade-power.h  homing-power.h  inversion-power.cpp  mega-death-power.cpp  mines-power.cpp  mines-power.h  old-big-named-power.h  old-mines-power.cpp  old-mines-power.h  shield-power.h  shotgun-power.h  tracking-power.h  triple-named-power.h  ultra-bounce-power.h  wall-sparks-power.cpp  wallhack-power.cpp
(+252 files in other folders)
